--- a/main.html
+++ b/main.html
@@ -10,9 +10,9 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-	<span class="B-element">Before Element</span>
-	<span class="M-element">This is the main container element</span>
-	<span class="A-element">After Element</span>
+	<div class="B-element">Before Element</div>
+	<div class="M-element">This is the main container element</div>
+	<div class="A-element">After Element</div>
 </body>
 
 </html>
