--- a/main.html
+++ b/main.html
@@ -10,9 +10,7 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-	<span class="B-element">Before Element</span>
-	<div class="M-element">This is the main container element</div>
-	<div class="A-element">After Element</div>
+	<div>This is the main container element</div>
 </body>
 
 </html>
